# pedrolindeza.com

./: .gitignore  README.md  app.py  pyproject.toml
.github/workflows/: main_pedrolindeza.yml
templates/: index.html
